# skyrim-reshade-helper

./: Build Release.bat  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: XSEPlugin.cmake
include/: PCH.h
src/: CustomRender.cpp  CustomRender.h  D3D11.cpp  Effects.cpp  Effects.h  Menu.cpp  Menu.h  PreFog.cpp  PreFog.h  XSEPlugin.cpp
src/RE/: BSGraphics.h  BSGraphicsTypes.cpp  BSGraphicsTypes.h
